fix: select component removing scrollbar

--- a/dcapal-frontend/src/style.css
+++ b/dcapal-frontend/src/style.css
@@ -96,4 +96,10 @@
             box-shadow: inset 0 0 10px 10px #737373;
         }
     }
+
+    /* Workaround for <Select> component causing scrollbar re-render: https://github.com/shadcn-ui/ui/issues/4227 */
+    html body[data-scroll-locked] {
+        overflow: visible !important;
+        margin-right: 0 !important;
+    }
 }
